fix: fixed yiq-contrasted-threshold 200 > 150, dark mode styling fixes, apex dark mode theme swap, bump deps for @ladjs/mongoose from 5s to 10s maxTimeMS

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -30,7 +30,7 @@ body {
     margin: 0 -0.4em;
     padding: 0.1em 0.4em;
     border-radius: 0.8em 0.3em;
-    background: transparent;
+    background: transparent !important;
     background-image: linear-gradient(
       to right,
       rgba(255, 225, 0, 0.1),
@@ -56,7 +56,7 @@ body {
 }
 
 .dropdown-toggle::after {
-  vertical-align:middle;
+  vertical-align:middle !important;
 }
 
 .modal-header {
@@ -101,7 +101,7 @@ html {
 }
 
 pre {
-  white-space: pre-wrap;
+  white-space: pre-wrap !important;
 }
 
 .opacity-50 {
@@ -116,5 +116,5 @@ pre {
 }
 
 .btn.focus, .btn:focus {
-  box-shadow: none;
+  box-shadow: none !important;
 }
