--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -29,7 +29,7 @@ $cyan: darken(#17a2b8, 10%) !default;
 $green: darken(#28a745, 15%) !default;
 
 $dark: #1d1d1d;
-$yiq-contrasted-threshold:  200;
+$yiq-contrasted-threshold:  150;
 
 $list-group-active-bg: $dark;
 $enable-responsive-font-sizes: true;
